--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -303,8 +303,10 @@
     <Compile Include="Hangfire\UnityBootstrapperConfigurationExtensions.cs" />
     <Compile Include="Hangfire\UnityJobActivator.cs" />
     <Compile Include="Model\Asset\BlobInfo.cs" />
+    <Compile Include="Model\ExportImport\ImportInfo.cs" />
     <Compile Include="Model\ExportImport\NotificationEvent\ExportImportNotificationEvent.cs" />
     <Compile Include="Model\ExportImport\PlatformExportRequest.cs" />
+    <Compile Include="Model\ExportImport\PlatformImportRequest.cs" />
     <Compile Include="Model\Jobs\Job.cs" />
     <Compile Include="Model\Notification\Notification.cs" />
     <Compile Include="Model\Notification\NotificationParameter.cs" />
