- UPD. Updates to tax observers/converters. - ADD. Added exempt possibility for customers.
Former-commit-id: 1b3055878807a37b82a84bc67c8f600245106342

--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -120,6 +120,7 @@
     <Compile Include="AvaTaxClasses\TaxSvc.cs" />
     <Compile Include="AvaTaxClasses\ValidateResult.cs" />
     <Compile Include="Controller\AvaTaxController.cs" />
+    <Compile Include="Converters\CustomerAddressConverter.cs" />
     <Compile Include="Converters\CustomerOrderCancelConverter.cs" />
     <Compile Include="Converters\ShoppingCartConverter.cs" />
     <Compile Include="Converters\CustomerOrderConverter.cs" />
