Dynamic properties - Finished backend.
Former-commit-id: 6f754eadf91dfab4dcd7ae882356c86948ff0df0

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -84,8 +84,10 @@
     <Compile Include="Asset\UploadStreamInfo.cs" />
     <Compile Include="Common\SerializationExtension.cs" />
     <Compile Include="DynamicProperties\DynamicProperty.cs" />
+    <Compile Include="DynamicProperties\DynamicPropertyDictionaryItem.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyName.cs" />
-    <Compile Include="DynamicProperties\DynamicPropertyValue.cs" />
+    <Compile Include="DynamicProperties\DynamicPropertyDictionaryValue.cs" />
+    <Compile Include="DynamicProperties\DynamicPropertyObjectValue.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyValueType.cs" />
     <Compile Include="DynamicProperties\IDynamicPropertyService.cs" />
     <Compile Include="DynamicProperties\IHasDynamicProperties.cs" />
