--- a/PLATFORM/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
+++ b/PLATFORM/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Model\DynamicContentItemGroup.cs" />
     <Compile Include="Model\Image.cs" />
     <Compile Include="Model\Inventory.cs" />
+    <Compile Include="Model\PaymentMethod.cs" />
     <Compile Include="Model\Price.cs" />
     <Compile Include="Model\Association.cs" />
     <Compile Include="Model\CategoryInfo.cs" />
