--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -122,8 +122,10 @@
     <Compile Include="Controller\AvaTaxController.cs" />
     <Compile Include="Converters\CustomerAddressConverter.cs" />
     <Compile Include="Converters\CustomerOrderCancelConverter.cs" />
+    <Compile Include="Converters\CustomerOrderAdjustementConverter.cs" />
     <Compile Include="Converters\ShoppingCartConverter.cs" />
     <Compile Include="Converters\CustomerOrderConverter.cs" />
+    <Compile Include="Observers\CalculateTaxAdjustmentObserver.cs" />
     <Compile Include="Observers\CancelOrderTaxesObserver.cs" />
     <Compile Include="Services\AvaTaxSettings.cs" />
     <Compile Include="Module.cs" />
