--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
@@ -51,10 +51,6 @@
       <HintPath>..\..\..\packages\Hangfire.Core.1.3.4\lib\net45\Hangfire.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -105,7 +101,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="module.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -115,12 +113,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\blades\backup\notifications\historyExport.tpl.html" />
-    <Content Include="Scripts\blades\backup\notifications\menuExport.tpl.html" />
-    <Content Include="Scripts\blades\backup\store-export.js" />
-    <Content Include="Scripts\blades\backup\store-export.tpl.html" />
-    <Content Include="Scripts\blades\backup\store-import.js" />
-    <Content Include="Scripts\blades\backup\store-import.tpl.html" />
     <Content Include="Scripts\blades\paymentMethod-detail.js" />
     <Content Include="Scripts\blades\seo-detail.js" />
     <Content Include="Scripts\blades\seo-detail.tpl.html" />
@@ -144,8 +136,6 @@
     <Content Include="Scripts\blades\store-advanced.js" />
     <Content Include="Scripts\blades\store-detail.js" />
     <Content Include="Scripts\blades\store-advanced.tpl.html" />
-    <Content Include="Scripts\resources\export.js" />
-    <Content Include="Scripts\resources\import.js" />
     <Content Include="Scripts\widgets\seoWidget.js" />
     <Content Include="Scripts\widgets\seoWidget.tpl.html" />
     <Content Include="Scripts\widgets\storeCurrenciesWidget.js" />
@@ -174,9 +164,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundJobs\Backup.cs" />
-    <Compile Include="BackgroundJobs\BackupStoreJob.cs" />
-    <Compile Include="Controllers\Api\StoreModuleBackupController.cs" />
     <Compile Include="Controllers\Api\StoreModuleController.cs" />
     <Compile Include="Controllers\PredefinedPermissions.cs" />
     <Compile Include="Converters\FulfillmentConverter.cs" />
@@ -184,12 +171,8 @@
     <Compile Include="Converters\ShippingMethodConverter.cs" />
     <Compile Include="Converters\StoreConverter.cs" />
     <Compile Include="Converters\SettingConverter.cs" />
-    <Compile Include="Model\StoreExportConfiguration.cs" />
-    <Compile Include="Model\StoreImportConfiguration.cs" />
+    <Compile Include="ExportImport\StoreExportImport.cs" />
     <Compile Include="Model\FulfillmentCenter.cs" />
-    <Compile Include="Model\Notifications\ExportNotification.cs" />
-    <Compile Include="Model\Notifications\ImportNotification.cs" />
-    <Compile Include="Model\Notifications\JobNotificationBase.cs" />
     <Compile Include="Model\PaymentMethod.cs" />
     <Compile Include="Model\ShippingMethod.cs" />
     <Compile Include="Model\Store.cs" />
