--- a/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
+++ b/PLATFORM/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Converters\PricelistAssignmentConverter.cs" />
     <Compile Include="Converters\PriceListConverter.cs" />
     <Compile Include="Converters\PriceConverter.cs" />
+    <Compile Include="ExportImport\PricingExportImport.cs" />
     <Compile Include="Model\ProductPrice.cs" />
     <Compile Include="Model\Price.cs" />
     <Compile Include="Model\Pricelist.cs" />
