--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -340,7 +340,9 @@
     <Content Include="Content\angular-gridster.css" />
     <Content Include="Content\angular-multi-select.css" />
     <Content Include="Scripts\angular-gridster.js" />
+    <Content Include="Scripts\app\exportImport\blades\import-main.js" />
     <Content Include="Scripts\app\exportImport\blades\export-main.js" />
+    <Content Include="Scripts\app\exportImport\blades\import-main.tpl.html" />
     <Content Include="Scripts\app\exportImport\blades\export-main.tpl.html" />
     <Content Include="Scripts\app\exportImport\blades\exportImport-main.js" />
     <Content Include="Scripts\app\exportImport\blades\exportImport-main.tpl.html" />
