--- a/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
+++ b/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
@@ -106,6 +106,10 @@
       <Project>{f7c9313b-522e-4619-abc9-8c7d4600d6b5}</Project>
       <Name>VirtoCommerce.Platform.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Core\VirtoCommerce.Domain\VirtoCommerce.Domain.csproj">
+      <Project>{67c58a78-ddea-4fa3-a969-1cab582918e4}</Project>
+      <Name>VirtoCommerce.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
