Replaced old contact properties with dynamic properties.
Former-commit-id: 0f97c482d8cc98858d12b3fe6397cd8b4ebecd45

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Common\PlatformVersion.cs" />
     <Compile Include="Common\SemanticVersion.cs" />
     <Compile Include="Common\SerializationExtension.cs" />
+    <Compile Include="DynamicProperties\DynamicPropertiesExtensions.cs" />
     <Compile Include="DynamicProperties\DynamicProperty.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyDictionaryItem.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyName.cs" />
