--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -347,6 +347,10 @@
     <Content Include="Scripts\app\dynamicProperties\blades\dynamicProperty-list.js" />
     <Content Include="Scripts\app\dynamicProperties\blades\dynamicObject-list.tpl.html" />
     <Content Include="Scripts\app\dynamicProperties\blades\dynamicProperty-list.tpl.html" />
+    <Content Include="Scripts\app\dynamicProperties\blades\property-dictionary.js" />
+    <Content Include="Scripts\app\dynamicProperties\blades\property-dictionary.tpl.html" />
+    <Content Include="Scripts\app\dynamicProperties\blades\property-valueType.js" />
+    <Content Include="Scripts\app\dynamicProperties\blades\property-valueType.tpl.html" />
     <Content Include="Scripts\app\dynamicProperties\dynamicProperties.js" />
     <Content Include="Scripts\app\dynamicProperties\resources\dynamicPropertiesApi.js" />
     <Content Include="Scripts\app\exportImport\blades\import-main.js" />
