--- a/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Order\Model\IFinanceInOperation.cs" />
     <Compile Include="Order\Model\IFinanceOperation.cs" />
     <Compile Include="Order\Model\IFinanceOutOperation.cs" />
+    <Compile Include="Order\Model\IHaveDimension.cs" />
     <Compile Include="Order\Model\IOperation.cs" />
     <Compile Include="Order\Model\IPosition.cs" />
     <Compile Include="Order\Model\IStockInOperation.cs" />
@@ -181,6 +182,8 @@
     <Compile Include="Order\Model\OperationProperty.cs" />
     <Compile Include="Order\Model\PropertyValueType.cs" />
     <Compile Include="Order\Model\ResponseGroup.cs" />
+    <Compile Include="Order\Model\ShipmentPackage.cs" />
+    <Compile Include="Order\Model\ShipmentItem.cs" />
     <Compile Include="Order\Services\IOperationNumberGenerator.cs" />
     <Compile Include="Order\Model\CustomerOrderResponseGroup.cs" />
     <Compile Include="Order\Model\Discount.cs" />
