ExportImport refactoring Fix errors
Former-commit-id: 5ee2170713a525d38b5a35919f80fa55698fe278

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/VirtoCommerce.CatalogModule.Web.csproj
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/VirtoCommerce.CatalogModule.Web.csproj
@@ -135,7 +135,7 @@
     <Compile Include="Converters\SearchConverter.cs" />
     <Compile Include="ExportImport\CsvCatalogExporter.cs" />
     <Compile Include="ExportImport\CsvCatalogImporter.cs" />
-    <Compile Include="ExportImport\CsvExportImportMode.cs" />
+    <Compile Include="ExportImport\CsvImportInfo.cs" />
     <Compile Include="ExportImport\CsvProduct.cs">
       <SubType>Code</SubType>
     </Compile>
