Add MP caching for stores Platform export add platform security and settings options fix default value for object settings
Former-commit-id: 23b135adea0e2975383f185a94b972912302b1e7

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Common\TreeExtension.cs" />
     <Compile Include="Common\ValueObject.cs" />
     <Compile Include="ExportImport\ISupportImportModule.cs" />
+    <Compile Include="ExportImport\PlatformExportImportOptions.cs" />
     <Compile Include="ExportImport\PlatformExportManifest.cs" />
     <Compile Include="Modularity\ManifestDependency.cs" />
     <Compile Include="Modularity\ModuleBase.cs" />
