--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -217,11 +217,13 @@
     <Compile Include="Security\CheckPermissionAttribute.cs" />
     <Compile Include="Security\IPermissionService.cs" />
     <Compile Include="Security\IRoleManagementService.cs" />
+    <Compile Include="Security\ISecurityService.cs" />
     <Compile Include="Security\Permission.cs" />
     <Compile Include="Security\PredefinedPermissions.cs" />
     <Compile Include="Security\Role.cs" />
     <Compile Include="Security\RoleSearchRequest.cs" />
     <Compile Include="Security\RoleSearchResponse.cs" />
+    <Compile Include="Security\SecurityResult.cs" />
     <Compile Include="Security\UserDetails.cs" />
     <Compile Include="Security\ApplicationUserLogin.cs" />
     <Compile Include="Security\UserSearchRequest.cs" />
