- UPD. Changes and updates to Shipstation integration module.
Former-commit-id: 97eeb7d8749ec716bf5546b5ca38e29c5a1ff7c7

--- a/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
+++ b/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
@@ -58,6 +58,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -96,8 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ShipstationController.cs" />
+    <Compile Include="Converters\CustomerOrderConverter.cs" />
+    <Compile Include="Helpers\OrderXsdSchema.cs" />
+    <Compile Include="Models\Order\ShipstationOrder.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ControllerConfigurationAttribute.cs" />
     <Compile Include="Services\IFulfillmentSettings.cs" />
     <Compile Include="Services\ShipstationSettings.cs" />
   </ItemGroup>
