- ADD. Shipstation get notification method, class, converter.
Former-commit-id: 8d33d4a6fd0bc5754643caf5435f12a015c15331

--- a/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
+++ b/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
@@ -98,8 +98,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ShipstationController.cs" />
+    <Compile Include="Converters\ShipNoticeConverter.cs" />
     <Compile Include="Converters\CustomerOrderConverter.cs" />
     <Compile Include="Helpers\OrderXsdSchema.cs" />
+    <Compile Include="Models\Notice\ShipNotice.cs" />
     <Compile Include="Models\Order\ShipstationOrder.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
