DynamicProperties model and UI redesign
Former-commit-id: 0ea5bdd463f2d59864348e7a8c68b0128f74e631

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="DynamicProperties\DynamicPropertyDictionaryItem.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyName.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyDictionaryItemName.cs" />
+    <Compile Include="DynamicProperties\DynamicObjectProperty.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyObjectValue.cs" />
     <Compile Include="DynamicProperties\DynamicPropertyValueType.cs" />
     <Compile Include="DynamicProperties\IDynamicPropertyService.cs" />
