- FIX. check if log file used by another process.
Former-commit-id: 5d7cadd937c56d809cb09a7b9117ae7adfe99074

--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Converters\CustomerOrderConverter.cs" />
     <Compile Include="Logging\BaseSlabContext.cs" />
     <Compile Include="Logging\EventSourceExtension.cs" />
+    <Compile Include="Logging\IsFileLockedExtension.cs" />
     <Compile Include="Logging\SlabExtendedException.cs" />
     <Compile Include="Logging\SlabInvoker.cs" />
     <Compile Include="Logging\VCEventSources.cs" />
