Move events to platform
Former-commit-id: 12df3fbcfc4b5d12841b3c4dc139d2391d78a7a8

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -95,6 +95,9 @@
     <Compile Include="DynamicProperties\DynamicPropertyValueType.cs" />
     <Compile Include="DynamicProperties\IDynamicPropertyService.cs" />
     <Compile Include="DynamicProperties\IHasDynamicProperties.cs" />
+    <Compile Include="Events\EventPublisher.cs" />
+    <Compile Include="Events\IEventPublisher.cs" />
+    <Compile Include="Events\IPriorityObserver.cs" />
     <Compile Include="ExportImport\ExportImportProgressInfo.cs" />
     <Compile Include="ExportImport\IPlatformExportImportManager.cs" />
     <Compile Include="ExportImport\ISupportExportModule.cs" />
