Renamed Notification namespace to Notifications.
Former-commit-id: 8296b55b6a5bfb68bcd5cef9e2a15ef22c2baff7

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -197,24 +197,24 @@
     <Compile Include="Modularity\Exceptions\ModuleTypeLoaderNotFoundException.cs" />
     <Compile Include="Modularity\Exceptions\ModuleTypeLoadingException.cs" />
     <Compile Include="Modularity\SampleDataLevel.cs" />
-    <Compile Include="Notification\EmailNotification.cs" />
-    <Compile Include="Notification\IEmailNotificationSendingGateway.cs" />
-    <Compile Include="Notification\INotificationManager.cs" />
-    <Compile Include="Notification\INotificationSendingGateway.cs" />
-    <Compile Include="Notification\INotificationTemplateResolver.cs" />
-    <Compile Include="Notification\INotificationTemplateService.cs" />
-    <Compile Include="PushNotification\IPushNotificationManager.cs" />
-    <Compile Include="Notification\ISmsNotificationSendingGateway.cs" />
-    <Compile Include="Notification\Notification.cs" />
-    <Compile Include="Notification\NotificationParameter.cs" />
-    <Compile Include="Notification\NotificationTemplate.cs" />
-    <Compile Include="PushNotification\PushNotification.cs" />
-    <Compile Include="PushNotification\PushNotificationSearchCriteria.cs" />
-    <Compile Include="PushNotification\PushNotificationSearchResult.cs" />
-    <Compile Include="Notification\SearchNotificationCriteria.cs" />
-    <Compile Include="Notification\SearchNotificationsResult.cs" />
-    <Compile Include="Notification\SendNotificationResult.cs" />
-    <Compile Include="Notification\SmsNotification.cs" />
+    <Compile Include="Notifications\EmailNotification.cs" />
+    <Compile Include="Notifications\IEmailNotificationSendingGateway.cs" />
+    <Compile Include="Notifications\INotificationManager.cs" />
+    <Compile Include="Notifications\INotificationSendingGateway.cs" />
+    <Compile Include="Notifications\INotificationTemplateResolver.cs" />
+    <Compile Include="Notifications\INotificationTemplateService.cs" />
+    <Compile Include="PushNotifications\IPushNotificationManager.cs" />
+    <Compile Include="Notifications\ISmsNotificationSendingGateway.cs" />
+    <Compile Include="Notifications\Notification.cs" />
+    <Compile Include="Notifications\NotificationParameter.cs" />
+    <Compile Include="Notifications\NotificationTemplate.cs" />
+    <Compile Include="PushNotifications\PushNotification.cs" />
+    <Compile Include="PushNotifications\PushNotificationSearchCriteria.cs" />
+    <Compile Include="PushNotifications\PushNotificationSearchResult.cs" />
+    <Compile Include="Notifications\SearchNotificationCriteria.cs" />
+    <Compile Include="Notifications\SearchNotificationsResult.cs" />
+    <Compile Include="Notifications\SendNotificationResult.cs" />
+    <Compile Include="Notifications\SmsNotification.cs" />
     <Compile Include="Packaging\ModuleIdentity.cs" />
     <Compile Include="Packaging\IPackageService.cs" />
     <Compile Include="Packaging\ModuleDescriptor.cs" />
